include/spark/scripting/SparkInterop.h

/* --- Opaque handles --- */
typedef struct SparkEngineContext SparkEngineContext;
typedef struct SparkScene SparkScene;
typedef struct SparkGameWorld SparkGameWorld;
typedef struct SparkGameObject SparkGameObject;
typedef struct SparkGameComponent SparkGameComponent;
typedef struct SparkInput SparkInput;
typedef struct SparkRenderFrame SparkRenderFrame;
typedef struct SparkFrameTiming {
    float deltaTimeSeconds;
    float totalTimeSeconds;
    uint64_t frameIndex;
} SparkFrameTiming;
typedef enum SparkComponentKind {
    SparkComponentKind_Unknown = 0,
    SparkComponentKind_Transform,
    SparkComponentKind_Mesh,
    SparkComponentKind_Collision,
    SparkComponentKind_Material,
    SparkComponentKind_PointLight,
    SparkComponentKind_SkinnedMesh,
    SparkComponentKind_Animator,
    SparkComponentKind_TextOverlay,
    SparkComponentKind_GuiCanvas,
    SparkComponentKind_Sky,
    SparkComponentKind_ParticleEmitter,
    SparkComponentKind_Terrain,
    SparkComponentKind_Sprite,
    SparkComponentKind_Tilemap,
    SparkComponentKind_BoxCollider2D,
    SparkComponentKind_Rigidbody2D,
    SparkComponentKind_SpriteAnimator,
    SparkComponentKind_CircleCollider2D,
    SparkComponentKind_SpriteLighting2D,
    SparkComponentKind_BoxCollider3D,
    SparkComponentKind_SphereCollider3D,
    SparkComponentKind_Rigidbody3D,
    SparkComponentKind_PhysicsMaterial3D,
    SparkComponentKind_DistanceJoint3D,
    SparkComponentKind_SceneSpatialPolicy,
    SparkComponentKind_AiAgent,
    SparkComponentKind_SoundCue,
    SparkComponentKind_Sprite2DCharacterAnimFsm,
    SparkComponentKind_Character3DAnimFsm,
    SparkComponentKind_SpotLight,
    SparkComponentKind_DirectionalLight,
    SparkComponentKind_Camera,
    SparkComponentKind_Camera2D,
    SparkComponentKind_Camera2DRig,
    SparkComponentKind_BlendMode,
    SparkComponentKind_RenderLayer,
    SparkComponentKind_SortingGroup,
} SparkComponentKind;
/* --- Engine / context / input --- */
SPARK_SCRIPT_API void spark_context_get_framebuffer_size(
        const SparkEngineContext* context,
        int* outWidth,
        int* outHeight);
SPARK_SCRIPT_API SparkInput* spark_context_get_input(SparkEngineContext* context);
SPARK_SCRIPT_API SparkScene* spark_context_try_get_scene(SparkEngineContext* context);
SPARK_SCRIPT_API void spark_context_set_scene_render_params(
        SparkEngineContext* context,
        const void* params,
        uint32_t paramsByteSize);
SPARK_SCRIPT_API void spark_context_process_gui_input(SparkEngineContext* context);
SPARK_SCRIPT_API int spark_input_is_key_down(const SparkInput* input, int keyCode);
SPARK_SCRIPT_API int spark_input_is_key_pressed_this_frame(const SparkInput* input, int keyCode);
SPARK_SCRIPT_API float spark_input_get_mouse_delta_x(const SparkInput* input);
SPARK_SCRIPT_API float spark_input_get_mouse_delta_y(const SparkInput* input);
SPARK_SCRIPT_API int spark_input_is_mouse_button_down(const SparkInput* input, int button);
SPARK_SCRIPT_API int spark_input_is_mouse_button_pressed_this_frame(const SparkInput* input, int button);
SPARK_SCRIPT_API int spark_input_is_mouse_button_released_this_frame(const SparkInput* input, int button);
SPARK_SCRIPT_API float spark_input_get_scroll_delta_y(const SparkInput* input);
SPARK_SCRIPT_API void spark_input_get_cursor_framebuffer_pixels(
        const SparkInput* input,
        float* outX,
        float* outY,
        int drawableWidth,
        int drawableHeight);
SPARK_SCRIPT_API void spark_input_set_cursor_captured(SparkInput* input, int capture);
SPARK_SCRIPT_API int spark_input_is_cursor_captured(const SparkInput* input);
/* --- Scene / world lifecycle --- */
SPARK_SCRIPT_API SparkGameWorld* spark_scene_get_world(SparkScene* scene);
SPARK_SCRIPT_API void spark_world_update_game_objects(
        SparkGameWorld* world,
        const SparkFrameTiming* timing,
        SparkEngineContext* context);
SPARK_SCRIPT_API void spark_world_process_sound_cues(SparkGameWorld* world, SparkEngineContext* context);
SPARK_SCRIPT_API void spark_world_simulate_game_ai(
        SparkGameWorld* world,
        const SparkFrameTiming* timing,
        SparkEngineContext* context);
SPARK_SCRIPT_API void spark_world_physics_simulate_2d(
        SparkGameWorld* world,
        const SparkFrameTiming* timing,
        const SparkPhysicsWorld2DSettings* settings);
SPARK_SCRIPT_API void spark_world_physics_simulate_3d(SparkGameWorld* world, const SparkFrameTiming* timing);
SPARK_SCRIPT_API SparkGameObject* spark_world_create_game_object(SparkGameWorld* world, const char* utf8Name);
SPARK_SCRIPT_API void spark_world_destroy_game_object(SparkGameWorld* world, SparkGameObject* object);
SPARK_SCRIPT_API int spark_world_load_gltf(SparkGameWorld* world, const char* path);
SPARK_SCRIPT_API int spark_world_load_skinned_gltf(SparkGameWorld* world, const char* path);