scripting/bindings/generated/Spark.Bindings/Native.g.cs

using System.Runtime.InteropServices;

namespace Spark.Bindings
{
    public partial struct SparkVector2
    {
        public float x;

        public float y;
    }

    public partial struct SparkVector3
    {
        public float x;

        public float y;

        public float z;
    }

    public partial struct SparkVector4
    {
        public float x;

        public float y;

        public float z;

        public float w;
    }

    public partial struct SparkQuaternion
    {
        public float x;

        public float y;

        public float z;

        public float w;
    }

    public unsafe partial struct SparkMatrix4
    {
        [NativeTypeName("float[16]")]
        public fixed float m[16];
    }

    [NativeTypeName("unsigned int")]
    public enum SparkSceneMeshSlot : uint
    {
        SparkSceneMeshSlot_UnitCube = 0,
        SparkSceneMeshSlot_GroundPlane = 1,
        SparkSceneMeshSlot_Custom = 2,
    }

    [NativeTypeName("unsigned int")]
    public enum SparkSceneSkyMode : uint
    {
        SparkSceneSkyMode_None = 0,
        SparkSceneSkyMode_Box = 1,
        SparkSceneSkyMode_Dome = 2,
        SparkSceneSkyMode_Plane = 3,
    }

    [NativeTypeName("unsigned int")]
    public enum SparkSpriteSortMode : uint
    {
        SparkSpriteSortMode_SortOrderOnly = 0,
        SparkSpriteSortMode_SortOrderThenWorldY = 1,
    }

    [NativeTypeName("unsigned int")]
    public enum SparkRigidbodyBodyType2D : uint
    {
        SparkRigidbodyBodyType2D_Kinematic = 0,
        SparkRigidbodyBodyType2D_Static = 1,
        SparkRigidbodyBodyType2D_Dynamic = 2,
    }

    public partial struct SparkPhysicsWorld2DSettings
    {
        public float gravityY;

        public float maxFallSpeed;

        public int resolveDynamicVsDynamic;
    }

    public partial struct SparkCamera2D
    {
        public SparkVector3 position;

        public float rotationRad;

        public float halfExtentY;

        public float clipNearZ;

        public float clipFarZ;
    }

    public partial struct SparkSpriteAnimationClip
    {
        [NativeTypeName("uint32_t")]
        public uint firstFrame;

        [NativeTypeName("uint32_t")]
        public uint frameCount;

        public float framesPerSecond;

        public int loop;
    }

    [NativeTypeName("unsigned int")]
    public enum SparkAnimLoopMode : uint
    {
        SparkAnimLoopMode_Loop = 0,
        SparkAnimLoopMode_Once = 1,
        SparkAnimLoopMode_Hold = 2,
    }

    [NativeTypeName("unsigned int")]
    public enum SparkSprite2DAnimLocomotionSource : uint
    {
        SparkSprite2DAnimLocomotionSource_HorizontalAbsVelX = 0,
        SparkSprite2DAnimLocomotionSource_SpeedSq = 1,
    }

    public partial struct SparkPlatformer2DAssetsInfo
    {
        public int usingKenneyTilesheet;

        public int usingKenneyPlayerAtlas;

        public int usingKenneyGem;

        [NativeTypeName("uint32_t")]
        public uint playerAtlasColumns;
    }

    public partial struct SparkGameObject
    {
    }

    public partial struct SparkPhysicsQueryFilter2D
    {
        [NativeTypeName("uint16_t")]
        public ushort queryCategoryBits;

        [NativeTypeName("uint16_t")]
        public ushort queryMaskBits;

        public int hitSolids;

        public int hitTriggers;
    }

    public unsafe partial struct SparkPhysicsQueryHit2D
    {
        [NativeTypeName("uint32_t")]
        public uint staticColliderIndex;

        public SparkGameObject* owner;
    }

    public partial struct SparkEngineContext
    {
    }

    public partial struct SparkScene
    {
    }

    public partial struct SparkGameWorld
    {
    }

    public partial struct SparkGameComponent
    {
    }

    public partial struct SparkInput
    {
    }

    public partial struct SparkRenderFrame
    {
    }

    public partial struct SparkFrameTiming
    {
        public float deltaTimeSeconds;

        public float totalTimeSeconds;

        [NativeTypeName("uint64_t")]
        public ulong frameIndex;
    }

    [NativeTypeName("unsigned int")]
    public enum SparkComponentKind : uint
    {
        SparkComponentKind_Unknown = 0,
        SparkComponentKind_Transform,
        SparkComponentKind_Mesh,
        SparkComponentKind_Collision,
        SparkComponentKind_Material,
        SparkComponentKind_PointLight,
        SparkComponentKind_SkinnedMesh,
        SparkComponentKind_Animator,
        SparkComponentKind_TextOverlay,
        SparkComponentKind_GuiCanvas,
        SparkComponentKind_Sky,
        SparkComponentKind_ParticleEmitter,
        SparkComponentKind_Terrain,
        SparkComponentKind_Sprite,
        SparkComponentKind_Tilemap,
        SparkComponentKind_BoxCollider2D,
        SparkComponentKind_Rigidbody2D,
        SparkComponentKind_SpriteAnimator,
        SparkComponentKind_CircleCollider2D,
        SparkComponentKind_SpriteLighting2D,
        SparkComponentKind_BoxCollider3D,
        SparkComponentKind_SphereCollider3D,
        SparkComponentKind_Rigidbody3D,
        SparkComponentKind_PhysicsMaterial3D,
        SparkComponentKind_DistanceJoint3D,
        SparkComponentKind_SceneSpatialPolicy,
        SparkComponentKind_AiAgent,
        SparkComponentKind_SoundCue,
        SparkComponentKind_Sprite2DCharacterAnimFsm,
        SparkComponentKind_Character3DAnimFsm,
        SparkComponentKind_SpotLight,
    }

    public static unsafe partial class Native
    {
        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_context_get_framebuffer_size([NativeTypeName("const SparkEngineContext *")] SparkEngineContext* context, int* outWidth, int* outHeight);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkInput* spark_context_get_input(SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkScene* spark_context_try_get_scene(SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_context_set_scene_render_params(SparkEngineContext* context, [NativeTypeName("const void *")] void* @params, [NativeTypeName("uint32_t")] uint paramsByteSize);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_context_process_gui_input(SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_key_down([NativeTypeName("const SparkInput *")] SparkInput* input, int keyCode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_key_pressed_this_frame([NativeTypeName("const SparkInput *")] SparkInput* input, int keyCode);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float spark_input_get_mouse_delta_x([NativeTypeName("const SparkInput *")] SparkInput* input);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float spark_input_get_mouse_delta_y([NativeTypeName("const SparkInput *")] SparkInput* input);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_mouse_button_down([NativeTypeName("const SparkInput *")] SparkInput* input, int button);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_mouse_button_pressed_this_frame([NativeTypeName("const SparkInput *")] SparkInput* input, int button);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_mouse_button_released_this_frame([NativeTypeName("const SparkInput *")] SparkInput* input, int button);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float spark_input_get_scroll_delta_y([NativeTypeName("const SparkInput *")] SparkInput* input);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_input_get_cursor_framebuffer_pixels([NativeTypeName("const SparkInput *")] SparkInput* input, float* outX, float* outY, int drawableWidth, int drawableHeight);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_input_set_cursor_captured(SparkInput* input, int capture);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_input_is_cursor_captured([NativeTypeName("const SparkInput *")] SparkInput* input);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameWorld* spark_scene_get_world(SparkScene* scene);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_update_game_objects(SparkGameWorld* world, [NativeTypeName("const SparkFrameTiming *")] SparkFrameTiming* timing, SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_process_sound_cues(SparkGameWorld* world, SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_simulate_game_ai(SparkGameWorld* world, [NativeTypeName("const SparkFrameTiming *")] SparkFrameTiming* timing, SparkEngineContext* context);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_physics_simulate_2d(SparkGameWorld* world, [NativeTypeName("const SparkFrameTiming *")] SparkFrameTiming* timing, [NativeTypeName("const SparkPhysicsWorld2DSettings *")] SparkPhysicsWorld2DSettings* settings);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_physics_simulate_3d(SparkGameWorld* world, [NativeTypeName("const SparkFrameTiming *")] SparkFrameTiming* timing);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern SparkGameObject* spark_world_create_game_object(SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* utf8Name);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void spark_world_destroy_game_object(SparkGameWorld* world, SparkGameObject* @object);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_load_gltf(SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* path);

        [DllImport("SparkInterop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern int spark_world_load_skinned_gltf(SparkGameWorld* world, [NativeTypeName("const char *")] sbyte* path);
